<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="10sp">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:textAlignment="center"
            android:textSize="40sp"
            android:fontFamily="monospace"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginBottom="50sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLight"
                    android:padding="10sp"
                    android:layout_marginBottom="30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_passcat"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_passcat_info"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLight"
                    android:padding="10sp"
                    android:layout_marginBottom="30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/root_word_bold"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/root_word_info"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLight"
                    android:padding="10sp"
                    android:layout_marginBottom="30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signature_bold"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signature_info"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLight"
                    android:padding="10sp"
                    android:layout_marginBottom="30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_bold"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_info"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLight"
                    android:padding="10sp"
                    android:layout_marginBottom="30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devby_bold"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devby_info"
                        android:textSize="25sp"
                        android:textColor="@color/colorDark"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>